--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "react-helmet": "^6.1.0",
     "react-input-mask": "^2.0.4",
     "react-popper": "^2.2.5",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-scrollspy-nav": "^1.2.4",
     "react-slick": "^0.28.1",
     "react-sticky": "^6.0.3",
     "react-sticky-box": "^0.9.3",
-    "react-summernote": "^2.0.2",
     "reactstrap": "^9.0.1",
     "recharts": "^2.1.9",
     "slick-carousel": "^1.8.1",
