--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@hookform/resolvers": "^2.8.8",
     "@popperjs/core": "^2.11.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -27,6 +28,7 @@
     "react-bootstrap-v5": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.27.1",
     "react-input-mask": "^2.0.4",
     "react-popper": "^2.2.5",
     "react-quill": "^1.3.5",
@@ -42,7 +44,8 @@
     "sticky-kit": "^1.1.3",
     "sticky-sidebar": "^3.3.1",
     "theia-sticky-sidebar": "^1.7.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
